fix(core-vitals): Colors contrast

--- a/assets/css/parts/single.css
+++ b/assets/css/parts/single.css
@@ -221,7 +221,7 @@
  */
 .entry-related .entry-title {
     text-align: center;
-    color: var(--color-secondary);
+    color: var(--color-black);
     padding: 60px 0 30px 0;
     font-size: var(--font-size-h1);
 }
